--- a/docs/integrations/agent_with_wandb_tracing.ipynb
+++ b/docs/integrations/agent_with_wandb_tracing.ipynb
@@ -1,18 +1,19 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5371a9bb",
    "metadata": {},
    "source": [
-    "# Tracing Walkthrough\n",
+    "# 追踪演示\n",
     "\n",
-    "There are two recommended ways to trace your LangChains:\n",
+    "有两种推荐的方法来追踪 LangChains：\n",
     "\n",
-    "1. Setting the `LANGCHAIN_WANDB_TRACING` environment variable to \"true\".\n",
-    "1. Using a context manager with tracing_enabled() to trace a particular block of code.\n",
+    "1. 将 `LANGCHAIN_WANDB_TRACING` 环境变量设置为 \"true\"。\n",
+    "2. 使用 `tracing_enabled()` 上下文管理器追踪代码块。\n",
     "\n",
-    "**Note** if the environment variable is set, all code will be traced, regardless of whether or not it's within the context manager."
+    "**注意**：如果设置了环境变量，则所有代码都将被追踪，无论其是否在上下文管理器内。"
    ]
   },
   {
